--- a/application/view/home/header.html.twig
+++ b/application/view/home/header.html.twig
@@ -119,7 +119,7 @@
 
     #main{
       padding-left: 20px;
-      padding-right: 20p;x
+      padding-right: 20px;
     }
 
     @media (max-width: 62em) {
