--- a/app/View/home/header.html.twig
+++ b/app/View/home/header.html.twig
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {$head}
+    <title>BlueJacket Home Page</title>
   </head>
 
   <body>
