--- a/app/View/home/homepage.html.twig
+++ b/app/View/home/homepage.html.twig
@@ -3,24 +3,24 @@
     <br>
     <br>
     <code>
-    Request Addr: {$.server.REQUEST_URI}
+    Request Addr: {{server.REQUEST_URI}}
     <br>
-    Request Time: {$.server.REQUEST_TIME}
+    Request Time: {{server.REQUEST_TIME}}
     <br>
-    Remote Addr: {$.server.REMOTE_ADDR}
+    Remote Addr: {{server.REMOTE_ADDR}}
     <br>
-    Server Admin: {$.server.SERVER_ADMIN}
+    Server Admin: {{server.SERVER_ADMIN}}
     <br>
-    Server Addr: {$.server.SERVER_ADDR}
+    Server Addr: {{server.SERVER_ADDR}}
     <br>
-    Server Port: {$.server.SERVER_PORT}
+    Server Port: {{server.SERVER_PORT}}
     <br>
-    Http Host: {$.server.HTTP_HOST}
+    Http Host: {{server.HTTP_HOST}}
     <br>
-    Http Referrer: {$.server.HTTP_REFERER}
+    Http Referrer: {{server.HTTP_REFERER}}
     <br>
-    Document Root: {$.server.DOCUMENT_ROOT}
+    Document Root: {{server.DOCUMENT_ROOT}}
     <br>
-    Server Software: {$.server.SERVER_SOFTWARE}
+    Server Software: {{server.SERVER_SOFTWARE}}
     </code>
 {% include footer.html.twig %}
