--- a/app/View/home/homepage.html.twig
+++ b/app/View/home/homepage.html.twig
@@ -1,4 +1,4 @@
-{% include header.html.twig %}
+{% include "header.html.twig" %}
    	This view file is /app/View/home/homepage.html
     <br>
     <br>
@@ -23,4 +23,4 @@
     <br>
     Server Software: {{server.SERVER_SOFTWARE}}
     </code>
-{% include footer.html.twig %}
+{% include "footer.html.twig" %}
