--- a/app/View/home/header.html.twig
+++ b/app/View/home/header.html.twig
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BlueJacket Home Page</title>
-    {% stylesheets
-        "/public/bower_components/pure/pure.min.css"
-    %}
+     <link href="/public/bower_components/pure/pure.min.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
