--- a/app/View/home/homepage.html.twig
+++ b/app/View/home/homepage.html.twig
@@ -1,5 +1,5 @@
 {% include "header.html.twig" %}
-   	This view file is /app/View/home/homepage.html
+   	This view file is /app/View/home/homepage.html.twig
     <br>
     <br>
     <code>
@@ -16,8 +16,6 @@
     Server Port: {{server.SERVER_PORT}}
     <br>
     Http Host: {{server.HTTP_HOST}}
-    <br>
-    Http Referrer: {{server.HTTP_REFERER}}
     <br>
     Document Root: {{server.DOCUMENT_ROOT}}
     <br>
