--- a/app/view/home/homepage.html.twig
+++ b/app/view/home/homepage.html.twig
@@ -1,5 +1,5 @@
 {% include "header.html.twig" %}
-   	This view file is /app/View/home/homepage.html.twig
+   	This view file is /app/view/home/homepage.html.twig
     <br>
     <br>
     <code>
